--- a/theme/caiyong.css
+++ b/theme/caiyong.css
@@ -59,7 +59,7 @@ span {
 	line-height:1.3;	/*全要素の行の高さを◯倍にする*/
 	font-style:normal;			 /*フォントスタイルを標準にする*/
 	font-size:14px;        /*フォントサイズ*/
-	color:#C30;		/*文字色*/
+	color:#6787b0;		/*文字色*/
 }
 
 /*線*/
