--- a/theme/katudou.css
+++ b/theme/katudou.css
@@ -103,17 +103,17 @@ padding: 0;
 /*============================================
 サイドメニュー
 ============================================*/
-#sidemenu ul{ 
+.sidemenu ul{ 
 margin: 0; 
 padding: 0; 
 list-style: none; 
 }
-#sidemenu li{ 
+.sidemenu li{ 
 display: inline; 
 padding: 0; 
 margin: 0; 
 }
-#sidemenu li a{
+.sidemenu li a{
 display: block; 
 border: 1px solid #FFF;
 background-color: #c6e1ef;　　/*背景色*/
@@ -128,7 +128,7 @@ font-weight: 700;
 font-color:#633;
 font-family:"ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif
 }
-#sidemenu li a:hover{
+.sidemenu li a:hover{
 border: 1px solid #FFF;
 background-color: #b0c4de;　　/*オンマウス背景色*/
 }
