--- a/theme/katudou.css
+++ b/theme/katudou.css
@@ -10,6 +10,9 @@
 	color:#000000;		/*文字色*/
 
 } 
+#header a:hover {
+    text-shadow: 5px 5px 5px #cacaca;
+}
 body {
 	background-color:#ffffff;	/*ページ全体の背景色*/
 }
@@ -287,9 +290,47 @@ div#header {
 /*============================================
 フッタ
 ============================================*/
-div#footer {
-	font-size:small;			 /*フォントサイズを小さくする*/
-	font-color:#96DFFF;			 /*フォントカラー*/
-	text-decoration:none;			/*リンクの下線を無くす*/
-	margin: 20px 0px;
+.footer-content {
+    position: relative;
+    max-width: 50em;
+    margin: 0 auto;
+    padding: 0 1.6875em;
+    z-index: 10;
+    margin-top: 50px;
+}
+#legal {
+    display: block;
+    clear: both;
+    font-size: 0.7em;
+    text-align: center;
+    margin: 0 1.1875em;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+.footer-tab.contact-us {
+    text-align: left;
+}
+
+.footer-tab {
+    float: left;
+    width: 33.33%;
+}
+#footer h3 {
+    margin: 1em 0 0 0;
+    padding: 0;
+}
+#footer p {
+    margin: 0;
+    padding: 0;
+    color: #5065BD;
+    font-size: 1em;
+    font-weight: 800;
+}
+#footer a {
+    color: #21ffe2;
+    display: inline-block;
+    text-decoration: none;
+}
+.footer-tab.location {
+    text-align: right;
 }
