--- a/theme/homepage.css
+++ b/theme/homepage.css
@@ -9,7 +9,7 @@
 	font-style:normal;			 /*フォントスタイルを標準にする*/
 	color:#000000;		/*文字色*/
 
-} 
+}
 #header a:hover {
     text-shadow: 5px 5px 5px #cacaca;
 }
@@ -39,7 +39,7 @@ a:hover { color: #FFCC99;
          text-decoration: none; }    /*ポイント時のリンク*/
 a:active { color: #FFCC99;
          text-decoration: none; }   /*選択中のリンク*/
-		 
+
 /*文字*/
 p {
 	line-height:1.3;	/*全要素の行の高さを◯倍にする*/
@@ -53,10 +53,10 @@ hr{
 border: none;
 border-top: dashed 2px #6787b0;　　　/*太さと色*/
 height: 1px;     /*破線の間隔*/
-color: #FFFFFF;   
+color: #FFFFFF;
 margin: 0 auto;	/*内容全体をセンタリング*/
 }
-		 
+
 
 /*============================================
 ヘッダ
@@ -110,11 +110,15 @@ div#header {
 ============================================*/
 
 .news {
-  overflow: auto;   /* スクロール表示 */ 
-	width:520px; margin:0;  text-align:left;	/*内容全体左寄せと、横幅*/
-  height: 300px;            /*高さ*/
-  background-color: #FFF;　　/*背景色*/
-  
+    overflow: auto;
+	width:520px; margin:0;
+    text-align:left;
+    height: 300px;
+    background-color: #FFF;
+    border: 1px #ccc solid;
+    padding: 12px;
+    margin-top: 15px;
+
   scrollbar-face-color: #ffffff;
 　scrollbar-track-color: #ffffff;
 　scrollbar-arrow-color: #c0c0c0;
@@ -136,10 +140,9 @@ span {
 .footer-content {
     position: relative;
     max-width: 50em;
-    margin: 0 auto;
+    margin: 10px auto;
     padding: 0 1.6875em;
     z-index: 10;
-    margin-top: 50px;
 }
 #legal {
     display: block;
