--- a/theme/homepage.css
+++ b/theme/homepage.css
@@ -17,7 +17,13 @@ body {
 	background-color:#ffffff;	/*ページ全体の背景色*/
 }
 
+ul {
+    margin: 0;
+    padding: 0;
+}
+
 body {
+    margin: 0;
     background: url(../assets/homepage/dh_bg.jpg) no-repeat scroll center 0 transparent;
 }
 
@@ -327,4 +333,143 @@ span {
 
 .p {
   margin-top: 70px;
+}
+
+.xj-footer123 {
+    position: relative;
+}
+
+#gfooter {
+    background-color: #f6f9fa;
+}
+.foot {
+    /* background: #fff; */
+    /* color: #000; */
+    font: 12px/20px "微软雅黑","宋体";
+    min-width: 960px;
+    margin: 0 auto;
+    text-align: left;
+}
+
+.foot_dark {
+    background-color: #f6f9fa;
+    /* color: #494949; */
+    color: #7b7b7b;
+}
+
+#gfooter .foot_top {
+    background-color: #1e2628;
+}
+
+#gfooter .foot_cpright {
+    padding: 50px 0 150px;
+    width: 1000px;
+    margin: 0 auto;
+}
+
+.healthy {
+    clear: both;
+    background: #1e2628;
+    padding: 8px 3%;
+    text-align: center;
+    color: #4f5f5f;
+}
+
+.foot_lefts {
+    position: absolute;
+    margin-top: 45px;
+    top: 0;
+    width: 500px;
+    float: left;
+    display: inline;
+}
+
+.foot_links {
+    display: inline;
+    float: right;
+    list-style: none;
+}
+
+.healthy strong {
+    margin: 0 5px 0 0;
+}
+
+.foot_ieg_logo {
+    float: left;
+    /* width: 180px; */
+    width: 300px;
+    height: 135px;
+    text-indent: -999em;
+    overflow: hidden;
+    margin: 10px 0 0 10px;
+    /* background: url(//game.gtimg.cn/images/js/2018foot/logo/foot-light.png); */
+}
+
+.foot_dark .foot_ieg_logo {
+    width: 300px;
+    padding-left: 100px;
+    display: inline-block;
+    background: url(../assets/homepage/WechatIMG355.png);
+    background-size: 30%;
+    background-repeat: no-repeat;
+}
+
+#gfooter .gfooter_selflogo {
+    width: 109px;
+    /* background-image: url(//game.gtimg.cn/images/wuxia/web201501/nav-copy.png); */
+    /* background: url(/static/home/images/common/logo.png); */
+    background-size: 70%;
+    background-repeat: no-repeat;
+}
+
+.foot_left {
+    float: left;
+    text-indent: -999em;
+    overflow: hidden;
+    margin: 10px 0 0 10px;
+    width: 85px;
+    height: 35px;
+}
+
+.foot_links .link_map {
+    font-size: 0;
+}
+.foot_links {
+    margin-top: 15px;
+}
+
+.foot_links li {
+    line-height: 20px;
+    overflow: hidden;
+}
+
+.foot_links li {
+    line-height: 20px;
+    overflow: hidden;
+}
+
+.foot_dark a {
+    color: #7b7b7b;
+}
+
+.span_line {
+    color: #7b7b7b;
+    font-size: 12px;
+}
+
+.f_line {
+    margin: 0 2px;
+}
+
+.foot_logo {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.foot_text {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 35px;
+    margin-left: 25px;
+    color: #ccc;
 }
