--- a/theme/caiyong.css
+++ b/theme/caiyong.css
@@ -24,7 +24,7 @@ body {
 
 div#pagebody {
     min-height: 700px;
-	width:850px; margin:0 auto;	/*内容全体をセンタリング*/
+	margin:0 auto;	/*内容全体をセンタリング*/
 	text-decoration:none;			/*リンクの下線を無くす*/
 }
 
