--- a/theme/katudou.css
+++ b/theme/katudou.css
@@ -23,7 +23,7 @@ body {
 }
 
 .backgroud {
-    background: url(../assets/homepage/WechatIMG581.png) no-repeat scroll center 0 transparent;
+    background: url(../assets/homepage/WechatIMG581.jpeg) no-repeat scroll center 0 transparent;
     filter:alpha(opacity=50);
     -moz-opacity:0.5;
     -khtml-opacity: 0.5;
