:sparkles: update ui

--- a/theme/info.css
+++ b/theme/info.css
@@ -493,3 +493,10 @@ div#header {
     margin-left: 25px;
     color: #ccc;
 }
+
+#content {
+    width: 524px;
+}
+#content img {
+    width: 100%;
+}
