--- a/theme/katudou.css
+++ b/theme/katudou.css
@@ -494,3 +494,12 @@ div#header {
     margin-left: 25px;
     color: #ccc;
 }
+
+
+#content {
+    width: 524px;
+}
+#content img {
+    width: 100%;
+}
+
