--- a/theme/works.css
+++ b/theme/works.css
@@ -113,15 +113,28 @@
 .item {
   display: inline-block;
   cursor: pointer;
-  width: 30%;
-  height: auto;
-  margin-right: .5%
+  width: 24%;
+  margin-right: .5%;
+  margin-bottom: .5%;
+  position: relative;
+}
+.item a {
+  position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
 }
 
+.item::before{content: "";padding-top: 100%;display: block;}
 .item img,
 .item--big img {
   width: 100%;
+  height: 100%;
   display:block;
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 
 .items--big {
