--- a/theme/homepage.css
+++ b/theme/homepage.css
@@ -46,8 +46,8 @@ body {
 }
 
 .activity {
-    color: #FFFF37;
-    border-color: #FFFF37;
+    color: #d626ac;
+    border-color: #d626ac;
 }
 
 .inset {
